--- a/app/assets/stylesheets/config/_colors.scss
+++ b/app/assets/stylesheets/config/_colors.scss
@@ -1,10 +1,11 @@
 // Define variables for your color scheme
 
 // For example:
+
 $red: #FD1015;
-$blue: #167FFB;
+$blue: #1F008C;
 $yellow: #FFC65A;
 $orange: #E67E22;
-$green: #1EDD88;
+$green: #04C586;
 $gray: #0E0000;
-$light-gray: #F4F4F4;
+$light-gray: #EFF4FB;
