--- a/app/assets/stylesheets/config/_colors.scss
+++ b/app/assets/stylesheets/config/_colors.scss
@@ -2,10 +2,15 @@
 
 // For example:
 
-$red: #FD1015;
+// our colors : 
 $blue: #1F008C;
+$green: #04C586;
+$light-gray: #EFF4FB;
+
+
+
+// boostrap :
+$red: #FD1015;
 $yellow: #FFC65A;
 $orange: #E67E22;
-$green: #04C586;
 $gray: #0E0000;
-$light-gray: #EFF4FB;
