--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -2,7 +2,7 @@
 .banner {
   background-size: cover;
   background-position: center;
-  padding: 150px;
+  padding: 100px;
 }
   
 .banner h1 {
@@ -18,4 +18,16 @@
   color: white;
   opacity: .7;
   text-shadow: 1px 1px 3px rgba(0,0,0,0.2);
+}
+
+.title {
+  color: $blue;
+  font-size: large;
+  text-align: center;
+  margin: 4px;
+  margin-top: 50px;
+}
+
+.highlight {
+  color: $green;
 }
