--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,4 +1,10 @@
-<h2>Sign up</h2>
+<div class="container">
+  <div class="row justify-content-center">
+    <div class="col-6">Hello There</div>
+    <div class="col-6 mt-10 mb-10">
+    
+<h2>Welcome to DeciDesk 👋 </h2>
+<h4>Please complete the form below to signup</h4>
 
 <%= simple_form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
   <%= f.error_notification %>
@@ -23,3 +29,7 @@
 <% end %>
 
 <%= render "devise/shared/links" %>
+    </div>
+  </div>
+</div>
+
