--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -1,6 +1,7 @@
 .navbar-lewagon {
   justify-content: space-between;
   background: #1F008C;
+  z-index: 500;
 }
 
 .navbar-lewagon .navbar-collapse {
@@ -8,12 +9,11 @@
 }
 
 .navbar-lewagon .navbar-brand img {
-  width: 40px;
+  width: 50px;
 }
 
-.sticky {
+.navbar {
   position: fixed;
-  top: 0;
+  z-index:1; //any higher integer value
   width: 100%;
 }
-  
