--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,12 +11,13 @@
     <%= stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track': 'reload' %>
 
     <%= javascript_pack_tag 'application', 'data-turbolinks-track': 'reload', defer: true %>
+
+      <%= render 'shared/navbar' %>
   </head>
-
-  <body>
-    <%= render 'shared/navbar' %>
-    <%= render 'shared/flashes' %>
-
+      <%= render 'shared/flashes' %>
+    <body>
     <%= yield %>
+    <%= render 'shared/footer' %>
   </body>
 </html>
+
