--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -17,9 +17,8 @@
   <h1>Why decidesk ?</h1>
 </div>
 
-
 <div class="container">
-  <div class="row align-items-center product-pitch">
+  <div class="row align-items-center">
     <div class="col-3">
       <div class="text-center">
         <svg xmlns="http://www.w3.org/2000/svg" width="180" height="180" viewBox="0 0 942.544 631.44">
