--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -24,8 +24,11 @@
           <%= link_to "Home", "#", class: "nav-link" %>
         </li>
 
-        <li class="nav-item">
+        <li class="nav-item m-2">
           <%= link_to "Login", new_user_session_path, class: "btn-nav" %>
+        </li>
+        <li class="nav-item m-2">
+          <%= link_to "Signup",  new_user_registration_path, class: "btn-nav" %>
         </li>
       <% end %>
     </ul>
