--- a/app/assets/stylesheets/components/_button.scss
+++ b/app/assets/stylesheets/components/_button.scss
@@ -17,6 +17,8 @@
   border-radius: 4px;
   background: #04C586;
   transition: background 0.3s ease;
+  text-align: center;
+  font-size: large;
 }
 
 .btn-nav:hover {
