--- a/app/assets/stylesheets/components/_cards.scss
+++ b/app/assets/stylesheets/components/_cards.scss
@@ -1,6 +1,8 @@
 .login-card {
   overflow: hidden;
   background: white;
-  box-shadow: 0 0 15px rgba(0,0,0,0.2);
-  padding: 20px;
+  box-shadow: 0 0 15px #00000033;
+  padding: 10px;
+  vertical-align: middle;
+  margin-bottom: 12px;
 }
