--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,41 +1,75 @@
 <div class="container">
-  <div class="row justify-content-center spacing-signup">
-    <div class="col-6">
-    
-    </div>
-    <div class="col-6 mt-10 mb-10 login-card">
-    
-     <h2>Welcome to DeciDesk 👋 </h2>
-     <h4>Please complete the form below to signup</h4>
-     
-     <%= simple_form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
-       <%= f.error_notification %>
-     
-       <div class="form-inputs">
-         <%= f.input :email,
-                     required: true,
-                     autofocus: true,
-                     input_html: { autocomplete: "email" }%>
-         <%= f.input :password,
-                     required: true,
-                     hint: ("#{@minimum_password_length} characters minimum" if @minimum_password_length),
-                     input_html: { autocomplete: "new-password" } %>
-         <%= f.input :password_confirmation,
-                     required: true,
-                     input_html: { autocomplete: "new-password" } %>
-       </div>
-     
-       <div class="form-actions">
-         <div class="btn-nav">
-           <%= f.button :submit, "Sign up" %>
-         </div>
-       </div>
-     <% end %>
+  <div class="row spacing-signup">
+    <div class="col-4 text-left">
+      <svg id="undraw_secure_login_pdn4" xmlns="http://www.w3.org/2000/svg" width="450" height="450" viewBox="0 0 793 551.732">
+      <ellipse id="Ellipse_1" data-name="Ellipse 1" cx="158" cy="12" rx="158" ry="12" transform="translate(0 527.732)" fill="#e6e6e6"/>
+      <path id="Tracé_1" data-name="Tracé 1" d="M324.272,296.554c27.5-11.7,61.744-4.285,95.191.858.311-6.228,4.084-13.808.132-18.153-4.8-5.279-4.359-10.825-1.47-16.4,7.388-14.265-3.2-29.444-13.884-42.065a23.669,23.669,0,0,0-19.755-8.292l-19.8,1.414a23.709,23.709,0,0,0-21.053,16.946h0c-4.727,6.429-7.257,12.841-5.664,19.219-7.081,4.839-8.27,10.68-5.089,17.264,2.7,4.146,2.669,8.182-.123,12.106a55.891,55.891,0,0,0-8.31,16.506Z" transform="translate(-203.5 -174.134)" fill="#2f2e41"/>
+      <path id="Tracé_2" data-name="Tracé 2" d="M977.709,651.1H417.291A18.791,18.791,0,0,1,398.5,632.306h0q304.727-35.415,598,0h0A18.791,18.791,0,0,1,977.709,651.1Z" transform="translate(-203.5 -174.134)" fill="#2f2e41"/>
+      <path id="Tracé_3" data-name="Tracé 3" d="M996.5,633.411l-598-1.105L467.806,515.69l.332-.553V258.131a23.753,23.753,0,0,1,23.756-23.754h407.9a23.753,23.753,0,0,1,23.754,23.756V516.906Z" transform="translate(-203.5 -174.134)" fill="#3f3d56"/>
+      <path id="Tracé_4" data-name="Tracé 4" d="M491.35,250.957a7.746,7.746,0,0,0-7.738,7.738V493.031a7.747,7.747,0,0,0,7.738,7.737h412.3a7.747,7.747,0,0,0,7.738-7.738V258.694a7.747,7.747,0,0,0-7.738-7.738Z" transform="translate(-203.5 -174.134)" fill="#fff"/>
+      <path id="Tracé_5" data-name="Tracé 5" d="M493.078,531.718a3.325,3.325,0,0,0-3.013,1.93L468.71,580.073a3.316,3.316,0,0,0,3.012,4.7H920.814a3.316,3.316,0,0,0,2.965-4.8l-23.212-46.425a3.3,3.3,0,0,0-2.965-1.833Z" transform="translate(-203.5 -174.134)" fill="#2f2e41"/>
+      <circle id="Ellipse_2" data-name="Ellipse 2" cx="4.974" cy="4.974" r="4.974" transform="translate(487.368 63.006)" fill="#fff"/>
+      <path id="Tracé_6" data-name="Tracé 6" d="M651.7,593.619a3.321,3.321,0,0,0-3.2,2.454l-5.357,19.9a3.316,3.316,0,0,0,3.2,4.179H748.217a3.315,3.315,0,0,0,3.133-4.4l-6.887-19.9a3.318,3.318,0,0,0-3.134-2.231Z" transform="translate(-203.5 -174.134)" fill="#2f2e41"/>
+      <path id="Tracé_7" data-name="Tracé 7" d="M720.046,337.135v4.421H264.306l.343-.552v-3.869Z" fill="#2f2e41"/>
+      <path id="Tracé_23" data-name="Tracé 23" d="M77.375,0A77.375,77.375,0,1,1,0,77.375,77.375,77.375,0,0,1,77.375,0Z" transform="translate(629.96 0)" fill="#04c586"/>
+      <path id="Tracé_8" data-name="Tracé 8" d="M942.89,285.223H878.779a4.426,4.426,0,0,1-4.422-4.421V242.114a4.426,4.426,0,0,1,4.422-4.421H942.89a4.426,4.426,0,0,1,4.421,4.421V280.8a4.426,4.426,0,0,1-4.421,4.421Zm-64.111-43.109V280.8h64.114l0-38.687Z" transform="translate(-203.5 -174.134)" fill="#1f008c"/>
+      <path id="Tracé_9" data-name="Tracé 9" d="M930.731,242.114H890.938V224.428c0-12.81,8.368-22.107,19.9-22.107s19.9,9.3,19.9,22.107Zm-35.372-4.421h30.95V224.428c0-10.413-6.363-17.686-15.475-17.686s-15.475,7.273-15.475,17.686Z" transform="translate(-203.5 -174.134)" fill="#1f008c"/>
+      <circle id="Ellipse_4" data-name="Ellipse 4" cx="4.421" cy="4.421" r="4.421" transform="translate(702.914 81.797)" fill="#1f008c"/>
+      <path id="Tracé_10" data-name="Tracé 10" d="M856.82,421.284H538.18a5.908,5.908,0,0,1-5.9-5.9V336.342a5.908,5.908,0,0,1,5.9-5.9H856.82a5.908,5.908,0,0,1,5.9,5.9v79.041A5.908,5.908,0,0,1,856.82,421.284ZM538.18,332.8a3.544,3.544,0,0,0-3.54,3.54v79.041a3.544,3.544,0,0,0,3.54,3.54H856.82a3.544,3.544,0,0,0,3.54-3.54V336.342a3.544,3.544,0,0,0-3.54-3.54Z" transform="translate(-203.5 -174.134)" fill="#e6e6e6"/>
+      <circle id="Ellipse_5" data-name="Ellipse 5" cx="24.036" cy="24.036" r="24.036" transform="translate(360.154 174.659)" fill="#e6e6e6"/>
+      <path id="Tracé_11" data-name="Tracé 11" d="M643.2,356.8a4.006,4.006,0,1,0,0,8.012H832.061a4.006,4.006,0,0,0,0-8.012Z" transform="translate(-203.5 -174.134)" fill="#e6e6e6"/>
+      <path id="Tracé_12" data-name="Tracé 12" d="M643.2,380.842a4.006,4.006,0,1,0,0,8.012h81.266a4.006,4.006,0,1,0,0-8.012Z" transform="translate(-203.5 -174.134)" fill="#e6e6e6"/>
+      <path id="Tracé_13" data-name="Tracé 13" d="M467.022,382.462l-58.9,31.316-.746-26.1c19.225-3.209,37.517-8.8,54.429-17.895l6.16-15.22a10.317,10.317,0,0,1,17.536-2.678h0a10.318,10.318,0,0,1-.908,14.069Z" transform="translate(-203.5 -174.134)" fill="#ffb8b8"/>
+      <path id="Tracé_14" data-name="Tracé 14" d="M323.1,563.267h0a11.574,11.574,0,0,1,1.469-9.363l12.939-19.858a22.612,22.612,0,0,1,29.335-7.739h0c-5.438,9.256-4.68,17.377,1.878,24.434a117.629,117.629,0,0,0-27.936,19.045,11.574,11.574,0,0,1-17.686-6.518Z" transform="translate(-203.5 -174.134)" fill="#2f2e41"/>
+      <path id="Tracé_15" data-name="Tracé 15" d="M469.7,537.3h0a22.2,22.2,0,0,1-18.871,10.779l-85.96.651-3.728-21.623,38.026-11.184-32.061-24.605,35.043-41.009,63.65,59.324a22.2,22.2,0,0,1,3.9,27.666Z" transform="translate(-203.5 -174.134)" fill="#2f2e41"/>
+      <path id="Tracé_16" data-name="Tracé 16" d="M351.453,685.179H331.321c-18.075-123.9-36.474-248.142,17.895-294.515L413.338,401.1l-8.2,54.43L369.347,496.54Z" transform="translate(-203.5 -174.134)" fill="#2f2e41"/>
+      <path id="Tracé_17" data-name="Tracé 17" d="M369.149,713.246h0a11.574,11.574,0,0,1-9.363-1.469l-21.858-2.938a22.612,22.612,0,0,1-7.741-29.334h0c9.257,5.438,17.377,4.679,24.434-1.88,4.986,10.067,13.2,9.453,21.047,17.935a11.574,11.574,0,0,1-6.517,17.686Z" transform="translate(-203.5 -174.134)" fill="#2f2e41"/>
+      <path id="Tracé_18" data-name="Tracé 18" d="M399.172,307.9l-37.28-8.947c6.192-12.674,6.7-26.776,3.728-41.754l25.351-.746C391.764,275.08,394.167,292.481,399.172,307.9Z" transform="translate(-203.5 -174.134)" fill="#ffb8b8"/>
+      <path id="Tracé_19" data-name="Tracé 19" d="M409.418,423.552c-27.139,18.493-46.314.633-60.947-26.923,2.033-16.862-1.259-37.041-7.357-58.966a40.138,40.138,0,0,1,24.506-48.4h0l32.061,13.421c27.224,22.19,32.582,46.227,22.368,71.578Z" transform="translate(-203.5 -174.134)" fill="#1f008c"/>
+      <path id="Tracé_20" data-name="Tracé 20" d="M331.321,326.542,301.5,342.2l52.938,31.315,7.366,18.169a9.637,9.637,0,0,1-5.789,12.731h0a9.637,9.637,0,0,1-12.762-8.544l-.745-12.663L275.222,361a15.733,15.733,0,0,1-9.873-9.612h0a15.733,15.733,0,0,1,5.9-18.3l54.1-37.118Z" transform="translate(-203.5 -174.134)" fill="#ffb8b8"/>
+      <path id="Tracé_21" data-name="Tracé 21" d="M361.146,329.524c-12.439-5.451-23.749.47-38.026,5.219l-2.237-39.517c14.176-7.556,27.692-9.593,40.263-3.728Z" transform="translate(-203.5 -174.134)" fill="#1f008c"/>
+      <circle id="Ellipse_6" data-name="Ellipse 6" cx="23.802" cy="23.802" r="23.802" transform="translate(148.723 54.29)" fill="#ffb8b8"/>
+      <path id="Tracé_22" data-name="Tracé 22" d="M404.5,249.224c-23.566,2.308-41.523-1.546-53-12.52v-8.838h51Z" transform="translate(-203.5 -174.134)" fill="#2f2e41"/>
+      </svg>
 
-     <div class="mt-3">
-      <p>Already have an account 👉<%= render "devise/shared/links" %> </p>
-     </div>
+    </div>
+
+    <div class="col-4 offset-md-2">
+      <div class="login-card">
+        <h4 class="text-center">Welcome to <strong class="highlight">DeciDesk</strong> 👋 </h4>
+        <p class="text-center mb-3">Please complete the form below to signup</p>
      
+        <%= simple_form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
+          <%= f.error_notification %>
+        
+          <div class="form-inputs">
+            <%= f.input :email,
+                        required: true,
+                        autofocus: true,
+                        input_html: { autocomplete: "email" }%>
+            <%= f.input :password,
+                        required: true,
+                        hint: ("#{@minimum_password_length} characters minimum" if @minimum_password_length),
+                        input_html: { autocomplete: "new-password" } %>
+            <%= f.input :password_confirmation,
+                        required: true,
+                        input_html: { autocomplete: "new-password" } %>
+          </div>
+        
+          <div class="form-actions">
+            <div class="btn-nav">
+              <%= f.button :submit, "Sign up" %>
+            </div>
+          </div>
+        <% end %>
+      
+    
+
+        <div class="mt-3">
+          <p>Already have an account 👉 <strong class="highlight"><%= render "devise/shared/links" %></strong></p>
+        </div>
+     
+      </div>
     </div>
   </div>
 </div>
