--- a/app/assets/stylesheets/components/_cards.scss
+++ b/app/assets/stylesheets/components/_cards.scss
@@ -1,8 +1,18 @@
-.login-card {
+.signup-card {
   overflow: hidden;
   background: white;
   box-shadow: 0 0 15px #00000033;
   padding: 10px;
   vertical-align: middle;
   margin-bottom: 12px;
+  margin-top: 25px;
+}
+
+.login-card {
+  overflow: hidden;
+  background: white;
+  box-shadow: 0 0 15px #00000033;
+  padding: 10px;
+  vertical-align: middle;
+  margin-top: 50px;
 }
