--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -6,7 +6,46 @@
     <a href="#"><i class="fab fa-twitter"></i></a>
     <a href="#"><i class="fab fa-linkedin"></i></a>
   </div>
-  <div>FEC IT ! </div>
+  <div>
+    <div mb-3>
+      <svg xmlns="http://www.w3.org/2000/svg" width="47.1756" height="60.0464" viewBox="0 0 571.756 700.464">
+      <g id="undraw_Balloons_re_8ymj" transform="translate(0)">
+      <path id="Tracé_201" data-name="Tracé 201" d="M237.145,687.3H249.4l5.834-47.288H237.145Z" fill="#ffb8b8"/>
+      <path id="Tracé_202" data-name="Tracé 202" d="M548.14,783.065h24.144a15.4,15.4,0,0,1,15.387,15.387v.5H548.14Z" transform="translate(-314.122 -99.768)" fill="#2f2e41"/>
+      <path id="Tracé_203" data-name="Tracé 203" d="M79.05,664.069l10.509,6.314,29.355-37.529-15.51-9.319Z" fill="#ffb8b8"/>
+      <path id="Tracé_204" data-name="Tracé 204" d="M384.371,772.413l8.182-13.618,20.7,12.434a15.4,15.4,0,0,1,5.265,21.114l-.258.429Z" transform="translate(-314.122 -99.768)" fill="#2f2e41"/>
+      <path id="Tracé_205" data-name="Tracé 205" d="M547.931,777.159c-2.473-2.518-8.617-43.875-17.707-106.682-3.161-21.841-6.153-42.513-8.618-58.343-21.094,46.37-55.2,96.531-96.175,141.435l-.236.259-.324-.133c-13.11-5.4-15.55-6.649-21.444-9.672-1.76-.9-3.831-1.964-6.589-3.343l-.153-.118c-1.266-1.446,10.285-20.62,50.672-85.813,17.594-28.4,35.786-57.766,47.835-78.153l.112-.19.216-.045c29.128-6.075,57.213,1.056,79.083,20.077l.177.155-.006.235c-.59,23.908-.094,61.448.343,94.57.854,64.667.8,83.559-1.216,84.158l-.1.019c-2.952.242-5.4.484-7.662.708a164.636,164.636,0,0,1-17.849,1.027h-.211Z" transform="translate(-314.122 -99.768)" fill="#2f2e41"/>
+      <path id="Tracé_206" data-name="Tracé 206" d="M484.431,396.3c-4.127-17.04-7.624-36.26.16-51.955,5.4-10.89,25.379-14.557,36.831-10.634s19.732,14.567,23.374,26.172,3.218,24.11,1.631,36.174C525.364,395.655,504.3,395.251,484.431,396.3Z" transform="translate(-314.122 -99.768)" fill="#2f2e41"/>
+      <circle id="Ellipse_33" data-name="Ellipse 33" cx="24.561" cy="24.561" r="24.561" transform="translate(181.292 247.407)" fill="#ffb8b8"/>
+      <path id="Tracé_207" data-name="Tracé 207" d="M489.949,366.677a30.85,30.85,0,1,1,61.662.813C530.588,367.535,509.566,367.579,489.949,366.677Z" transform="translate(-314.122 -99.768)" fill="#2f2e41"/>
+      <path id="Tracé_208" data-name="Tracé 208" d="M586.452,606.977c-4.529-15.451-6.785-26.265-9.39-38.754-3.572-17.12-7.62-36.524-18.771-74.3l-.028-.093.009-.1c3.157-32.765-10.606-67.533-35.919-90.738a8.764,8.764,0,0,0-11.964.606c-14.241,15.992-23.191,30.972-27.361,45.8l-.09.321c5.945,19.13,12.6,38.356,19.036,56.956l.092.266-.18.217c-24.1,29.017-37.429,67.8-36.626,106.521a214.655,214.655,0,0,1,71.777-12.017,232.553,232.553,0,0,1,49.361,5.308Z" transform="translate(-314.122 -99.768)" fill="#3f3d56"/>
+      <path id="Tracé_209" data-name="Tracé 209" d="M186.941,382.463l36.276,78.977,20.724-20.977Z" opacity="0.1"/>
+      <path id="Tracé_210" data-name="Tracé 210" d="M698.753,180.275c.345-44.182-28.476-80.225-64.373-80.505s-65.278,35.309-65.623,79.49c-.313,40.056,23.348,73.421,54.521,79.512l-2.152,12.9,23.823.186L643,258.926C674.261,253.323,698.44,220.331,698.753,180.275Z" transform="translate(-314.122 -99.768)" fill="#1f008c"/>
+      <path id="Tracé_211" data-name="Tracé 211" d="M590.592,200.431l-9-.07a146.494,146.494,0,0,1,.4-51l9,.07Q584.941,175.836,590.592,200.431Z" transform="translate(-314.122 -99.768)" fill="#fff"/>
+      <rect id="Rectangle_76" data-name="Rectangle 76" width="27" height="6" transform="translate(305.516 158.893) rotate(0.447)" fill="#3f3d56"/>
+      <path id="Tracé_212" data-name="Tracé 212" d="M823.828,204.67c3.5-44.044-22.677-82.053-58.462-84.895s-67.632,30.559-71.13,74.6c-3.171,39.931,18.047,74.9,48.706,83.2l-3.067,12.713,23.748,1.886L762.6,279.14C794.185,275.783,820.657,244.6,823.828,204.67Z" transform="translate(-314.122 -99.768)" fill="#1f008c"/>
+      <path id="Tracé_213" data-name="Tracé 213" d="M714.505,217.053l-8.972-.713a146.493,146.493,0,0,1,4.038-50.84l8.972.713Q710.624,192.118,714.505,217.053Z" transform="translate(-314.122 -99.768)" fill="#fff"/>
+      <rect id="Rectangle_77" data-name="Rectangle 77" width="27" height="6" transform="matrix(0.997, 0.079, -0.079, 0.997, 425.198, 177.437)" fill="#3f3d56"/>
+      <rect id="Rectangle_78" data-name="Rectangle 78" width="376.138" height="3" transform="matrix(0.522, -0.853, 0.853, 0.522, 241.217, 500.485)" fill="#3f3d56"/>
+      <path id="Tracé_214" data-name="Tracé 214" d="M874.622,247.939c20.788-38.987,11.961-84.284-19.715-101.175s-74.208,1.022-95,40.009c-18.847,35.346-13.351,75.878,11.445,95.727l-7.887,10.432,21.021,11.209,4.267-12.362C819.057,301.308,855.775,283.285,874.622,247.939Z" transform="translate(-314.122 -99.768)" fill="#1f008c"/>
+      <path id="Tracé_215" data-name="Tracé 215" d="M769.443,215.655,761.5,211.42a146.494,146.494,0,0,1,24-45l7.942,4.235Q775.838,191.243,769.443,215.655Z" transform="translate(-314.122 -99.768)" fill="#fff"/>
+      <rect id="Rectangle_79" data-name="Rectangle 79" width="27" height="6" transform="translate(454.064 180.949) rotate(28.067)" fill="#3f3d56"/>
+      <rect id="Rectangle_80" data-name="Rectangle 80" width="376.138" height="3" transform="matrix(0.588, -0.809, 0.809, 0.588, 241.476, 494.299)" fill="#3f3d56"/>
+      <rect id="Rectangle_81" data-name="Rectangle 81" width="376.138" height="3" transform="translate(254.891 532.124) rotate(-79.929)" fill="#3f3d56"/>
+      <path id="Tracé_216" data-name="Tracé 216" d="M581.939,566.179a10.056,10.056,0,0,1-9.055-12.481l-29.891-19.583,17.047-7.365,25.771,19.726a10.11,10.11,0,0,1-3.872,19.7Z" transform="translate(-314.122 -99.768)" fill="#ffb8b8"/>
+      <path id="Tracé_217" data-name="Tracé 217" d="M552.875,551.723c-17.875-20.564-36.359-41.828-53.186-63.206l-.108-.144V488.2c.077-17.457.156-35.5,2.224-55.7a15.983,15.983,0,0,1-4.237-13.087,17.721,17.721,0,0,1,7.782-13.234c8.422-5.32,21.042-2.44,27.007,6.167,5.759,8.308,4.917,20.21.523,26.2l-4.865,38.152-.43-.033.1.048.034-.028.063.077.149.076c-.008.016-.018.039-.03.069,15.784,19.272,32.1,39.193,48.4,58.265l.361.423-.459.314c-7.637,5.236-15.535,10.651-22.649,15.887l-.377.267Z" transform="translate(-314.122 -99.768)" fill="#3f3d56"/>
+      <path id="Tracé_218" data-name="Tracé 218" d="M696.122,800.232h-381a1,1,0,1,1,0-2h381a1,1,0,0,1,0,2Z" transform="translate(-314.122 -99.768)" fill="#3f3d56"/>
+      <path id="Tracé_219" data-name="Tracé 219" d="M492.715,480.274Z" fill="#f2f2f2"/>
+      <path id="Tracé_220" data-name="Tracé 220" d="M846.128,591.46l-.605,1.907-37.679-11.956c3.341,4.413,14.533,18.194,26.162,21.231,13.893,3.629,21.048-1.443,23.142-9.459s-1.667-15.938-15.56-19.568c-11.777-3.076-28.553,3.678-33.393,5.808Z" transform="translate(-314.122 -99.768)" fill="#eff4fb"/>
+      <path id="Tracé_221" data-name="Tracé 221" d="M350.832,578.731h0Z" fill="#f2f2f2"/>
+      <path id="Tracé_222" data-name="Tracé 222" d="M668.022,719.3l-2,.1-2-39.479c-2.963,4.674-11.951,19.985-10.723,31.942,1.467,14.284,8.724,19.209,16.965,18.363s14.345-7.144,12.878-21.428c-1.244-12.108-13.446-25.456-17.136-29.243Z" transform="translate(-314.122 -99.768)" fill="#eff4fb"/>
+      <path id="Tracé_223" data-name="Tracé 223" d="M63.981,131.667Z" fill="#f2f2f2"/>
+      <path id="Tracé_224" data-name="Tracé 224" d="M344.653,207.87l1.192-1.607,31.749,23.55c-1.725-5.259-7.833-21.929-17.844-28.58-11.96-7.946-20.375-5.474-24.959,1.426s-3.6,15.615,8.358,23.562c10.138,6.736,28.2,5.8,33.468,5.358Z" transform="translate(-314.122 -99.768)" fill="#eff4fb"/>
+      </g>
+      </svg>
+     </div>
+  
+  </div>
   <div class="footer-copyright">
     This footer is made with <i class="fas fa-heart"></i> at Decidesk
   </div>
