--- a/app/views/reports/_form.html.erb
+++ b/app/views/reports/_form.html.erb
@@ -1,4 +1,6 @@
- <%= simple_form_for @report do |f| %>
-  <%= f.input :csv_file, as: :file, hint: 'Upload your FEC in csv format here', required: true %>
-  <%= f.submit %>
-<% end %>
+ <div class="mt-5">
+   <%= simple_form_for(@report, as: :report, method: :post, url: report_path) do |f| %>
+    <%= f.input :csv_file, as: :file, hint: 'Upload your FEC in csv format here', required: true %>
+    <%= f.submit %>
+  <% end %>
+</div>
