corrected report model

--- a/app/views/reports/show.html.erb
+++ b/app/views/reports/show.html.erb
@@ -1,3 +1,9 @@
 <div>
   <%= render 'form', reports: @reports %>
 </div>
+
+<div>
+  <%= current_user.email %>
+  <%= current_user.lines.count %>
+  <%= current_user.lines.last.category %>
+</div>
