--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -2,7 +2,7 @@
 .banner {
   background-size: cover;
   background-position: center;
-  padding: 100px;
+  padding: 50px;
 }
   
 .banner h1 {
@@ -26,6 +26,7 @@
   text-align: center;
   margin: 4px;
   margin-top: 50px;
+  margin-bottom: 30px;
 }
 
 .highlight {
