--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,12 +1,12 @@
-<div class="banner" style="background-image: linear-gradient(182deg, rgb(31,0,140),rgb(31,0,140));">
+<div class="banner" style="background-image: linear-gradient(182deg, rgb(31,0,140),rgb(31,0,140))">
   <div class="container">
     <div class="row align-items-center">
-      <div class="col banner-container">
+      <div class="col">
         <h1> We help you to indentify <strong class="highlight">business opportunities</strong> out of <strong>conformity constraints</strong>.</h1>
         <p>Import, analyse, decide !</p>
         <a class="btn-flat" href="#">Discover</a>
       </div>
-      <div class="col banner-container">
+      <div class="col banner-img">
         <svg xmlns="http://www.w3.org/2000/svg" width="400" height="400" viewBox="0 0 763.056 458">
         <g id="undraw_Finance_re_gnv2" transform="translate(0)">
         <path id="Tracé_156" data-name="Tracé 156" d="M266.472,317a48,48,0,1,1,48-48,48,48,0,0,1-48,48Zm0-94a46,46,0,1,0,46,46,46,46,0,0,0-46-46Z" transform="translate(-218.472 -221)" fill="#f2f2f2"/>
@@ -57,8 +57,8 @@
 
 <div class="container mb-5">
   <div class="row align-items-center mb-5">
-    <div class="col-3 m">
-      <div class="text-center">
+    <div class="col-3">
+      <div class="text-center mt-4">
         <svg xmlns="http://www.w3.org/2000/svg" width="180" height="180" viewBox="0 0 942.544 631.44">
         <g id="undraw_Data_trends_re_2cdy" transform="translate(0 0.001)">
         <path id="Tracé_1" data-name="Tracé 1" d="M879.59,413.72l2.8-22.427a30.285,30.285,0,0,1,60.1,7.5l-2.8,22.427a4. 073,4.073,0,0,1-4.54,3.533l-52.03-6.491a4.073,4.073,0,0,1-3.533-4.54Z" transform="translate(-128.726 -134.28)"  fill="#2f2e41"/>
@@ -116,11 +116,11 @@
         <path id="Tracé_38" data-name="Tracé 38" d="M258.163,206.744l-45.824-34.323-45.2,33.854-1.034-1.38,46.233-34.63,45.606,34.16,45.321-49.6.181-.074,45.716-18.419.645,1.6-45.534,18.346Z" fill="#3f3d56"/>
         <path id="Tracé_39" data-name="Tracé 39" d="M1070.27,765.72h-381a1,1,0,0,1,0-2h381a1,1,0,0,1,0,2Z" transform="translate(-128.726 -134.28)" fill="#ccc"/></g></svg>
       </div>
-      <div class="text-center"><p>Keep <strong class="highlight">control</strong> of your finance in just a few clicks</p></div>
+      <div class="text-center mt-5"><h5>Keep <strong class="highlight">control</strong> of your finance in just a few clicks</h5></div>
     </div>
 
     <div class="col-3">
-      <div class="text-center">
+      <div class="text-center mt-4">
         <svg xmlns="http://www.w3.org/2000/svg" width="180" height="180" viewBox="0 0 824.812 438.316">
         <g id="undraw_Account_re_o7id" transform="translate(0 0)">
         <path id="Path_141" data-name="Path 141" d="M1007.07,668.026H547.8a5.345,5.345,0,0,1-5.338-5.338V236.18a5.345,5.345,0,0,1,5.338-5.338H1007.07a5.345,5.345,0,0,1,5.338,5.338V662.687a5.344,5.344,0,0,1-5.338,5.338ZM547.8,232.973a3.207,3.207,0,0,0-3.2,3.2V662.687a3.207,3.207,0,0,0,3.2,3.2H1007.07a3.206,3.206,0,0,0,3.2-3.2V236.18a3.207,3.207,0,0,0-3.2-3.2Z" transform="translate(-187.596 -230.842)" fill="#e6e6e6"/>
@@ -151,11 +151,11 @@
         <circle id="Ellipse_2" data-name="Ellipse 2" cx="29" cy="29" r="29" transform="translate(286.628 89.592)" fill="#fff"/></g></svg>
 
       </div>
-      <div class="text-center"><p><strong class="highlight">Focus</strong> on what matters</p></div>
+      <div class="text-center mt-5"><h5><strong class="highlight">Focus</strong> on what matters</h5></div>
     </div>
 
     <div class="col-3">
-      <div class="text-center">
+      <div class="text-center mt-4">
         <svg xmlns="http://www.w3.org/2000/svg" width="180" height="180" viewBox="0 0 995 697.682">
         <g id="undraw_Data_re_80ws" transform="translate(0 0)">
         <path id="Tracé_13" data-name="Tracé 13" d="M915.189,538.707H274.35a16.519,16.519,0,0,1-16.5-16.5V127.054a12.1,12.1,0,0,1,12.088-12.089H919.391a12.311,12.311,0,0,1,12.3,12.3V522.207A16.519,16.519,0,0,1,915.189,538.707Z" transform="translate(-102.5 -101.159)" fill="#f2f2f2"/>
@@ -250,11 +250,11 @@
         <path id="Tracé_81" data-name="Tracé 81" d="M293.5,798.841h-190a1,1,0,0,1,0-2h190a1,1,0,0,1,0,2Z" transform="translate(-102.5 -101.159)" fill="#ccc"/>
          </g></svg>
       </div>
-      <div class="text-center"><p>Access the right <strong class="highlight">data</strong> for the right purpose</p></div>
+      <div class="text-center mt-5"><h5>Access the right <strong class="highlight">data</strong> for the right purpose</h5></div>
     </div>
 
     <div class="col-3">
-      <div class="text-center">
+      <div class="text-center mt-4">
         <svg xmlns="http://www.w3.org/2000/svg" width="180" height="180" viewBox="0 0 769.412 524.375">
         <g id="undraw_Business_decisions_re_84ag" transform="translate(0)">
         <circle id="Ellipse_16" data-name="Ellipse 16" cx="6.813" cy="6.813" r="6.813" transform="translate(167.944 0)" fill="#e6e6e6"/>
@@ -345,7 +345,7 @@
         <path id="Tracé_104" data-name="Tracé 104" d="M983.706,712.187h-266a1,1,0,0,1,0-2h266a1,1,0,0,1,0,2Z" transform="translate(-215.294 -187.813)" fill="#3f3d56"/>
         </g></svg>
       </div>
-      <div class="text-center"><p>Make<strong class="highlight"> infomed decisions</strong> on facts and data</p></div>
+      <div class="text-center mt-5"><h5>Make<strong class="highlight"> infomed decisions</strong> on facts and data</h5></div>
     </div>
   </div>
 </div>
@@ -380,6 +380,30 @@
   </div>
 </div>
 
+<div class="title">
+  <h1>How it works</h1>
+</div>
+
+<div class="container">
+  <div class="cards">  
+    <div class="card">
+      <img src="images/apply.svg" alt="">
+      <h4><strong class="highlight">1 - Get a Fec</strong></h4>
+      <p>Download a FEC from your accounting software or ask your accountant ! </p>
+    </div>  
+    <div class="card">
+      <img src="images/learn.svg" alt="">
+      <h4>2 - Upload it on DeciDesk</h4>
+      <p>Upload the file on your DeciDesck account !</p>
+    </div>  
+    <div class="card">
+      <img src="images/product.svg" alt="">
+      <h4>3 - Let us do the magic</h4>
+      <p>Consult the results of the analysis on your dashboard !</p>
+    </div>  
+  </div>
+</div>
+
 
 <div>
   <div class="title ">
@@ -389,6 +413,10 @@
   <a class="btn btn-bleu" href="#">Ask for a demo now</a>
   </center>
 </div>
+
+
+
+
 
 
 
