--- a/app/views/reports/show.html.erb
+++ b/app/views/reports/show.html.erb
@@ -5,5 +5,5 @@
 <div>
   <%= current_user.email %>
   <%= current_user.lines.count %>
-  <%# <%= current_user.lines.last.category %> %>
+  <%= current_user.lines.last.category %>
 </div>
