--- a/app/views/expenditures/show.html.erb
+++ b/app/views/expenditures/show.html.erb
@@ -6,13 +6,13 @@
   <div class="row justify-content-center">
     <ul class="list-inline tabs-underlined">
       <li>
-        <%= link_to "Expenditure", expenditure_path, class: "tab-underlined active" %>
+        <%= link_to "Expenditure", report_expenditure_path, class: "tab-underlined active" %>
       </li>
       <li>
-        <%= link_to "Advice", expenditure_path, class: "tab-underlined" %>
+        <%= link_to "Advice", report_expenditure_path, class: "tab-underlined" %>
       </li>
       <li>
-        <%= link_to "Comments", expenditure_path, class: "tab-underlined" %>
+        <%= link_to "Comments", report_expenditure_path, class: "tab-underlined" %>
       </li>
     </ul>
   </div>
