chartjs set up, edits to line.rb too

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,7 +11,7 @@
     <%= stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track': 'reload' %>
 
     <%= javascript_pack_tag 'application', 'data-turbolinks-track': 'reload', defer: true %>
-
+    <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/chartkick/2.3.0/chartkick.js"></script> -->
   </head>
 
     <body>
@@ -21,7 +21,6 @@
       <div class="margin-nav main">
         <%= yield %>
       </div>
-
     </body>
     <%= render 'shared/footer' %>
 </html>
