--- a/app/views/sales/show.html.erb
+++ b/app/views/sales/show.html.erb
@@ -1,1 +1,10 @@
 <h1>Hello</h1>
+<div class="row">
+  <div class="col-6">
+    <div data-controller="charts" data-charts-numbers="<%= Line.annual_sales.map { |key, value| {x: key, y: value } }.to_json %>">
+      <canvas data-charts-target="container" width="400" height="400">
+      </canvas>
+    </div>
+  </div>
+</div>
+
