--- a/app/assets/stylesheets/components/_dashboards.scss
+++ b/app/assets/stylesheets/components/_dashboards.scss
@@ -1,6 +1,66 @@
-.wrapper {
-    display: grid;
-    grid-template-columns: repeat(3, 1fr);
-    grid-column-gap: 10px;
-    grid-row-gap: 1em;
-  }
+// For the Dash navbar (item / adive / notes)
+.dash-nav {
+  margin-top: 120px;
+  width: 1100px;
+  background: #eff4fb;
+  display: flex;
+  align-items: center;
+  justify-content: start;
+  height: 30px;
+  color: rgba(0, 0, 0, 0.3);
+  border-bottom: solid 1px #1f008c;
+  margin-bottom: 20px;
+}
+
+.dash-nav p{
+  margin-right: 110px;
+  margin-left: 10px;
+  margin-bottom: 10px;
+  color: #1f008c;
+}
+
+// Card for the graph
+// .card-graph {
+//   // display: flex;
+//   // width: 700px;
+//   // height: 350px;
+//   // top: 180px;
+//   justify-content: center;
+//   align-items: center;
+//   color: white;
+//   text-shadow: 1px 1px 3px rgba(0,0,0,0.2);
+//   margin: 20px;
+// }
+
+//Card for the table
+
+.card-dash {
+  justify-content: center;
+  align-items: center;
+  color: white;
+  text-shadow: 1px 1px 3px rgba(0,0,0,0.2);
+  border-radius: 5px;
+  box-shadow: 0 0 15px rgba(0,0,0,0.2);
+  margin-top: 20px;
+  margin-bottom: 20px;
+  margin-left: 10px;
+}
+
+.card-table p{
+  color: black;
+  font-size: small;
+  text-align: center;
+  margin-top: 10px;
+}
+
+.card-table th{
+  color: black;
+  font-size: small;
+  text-align: center;
+  margin-top: 10px;
+}
+
+
+
+
+
