--- a/app/views/treasuries/show.html.erb
+++ b/app/views/treasuries/show.html.erb
@@ -45,26 +45,51 @@
   </div>
 
     <div class="row d-flex justify-content-around">
-    <div class="col-lg-5 card-dash">Table 1</div>
-    <div class="col-lg-5 card-dash">Table 2
+
+       <div class="divTable">
+         <div class="divRow"> Top 5 - CashIn 👍</div>
+         <div class="headRow">
+           <div  class="divCell"><strong class="highlight">Account number</strong></div>
+           <div  class="divCell"><strong class="highlight">Date</strong></div>
+           <div  class="divCell"><strong class="highlight">Amount</strong></div>
+         </div>
+
+         <% @top5_debit.each do |line| %>
+           <div class="divRow">
+             <div class="divCell"><%= line.compte_num %></div>
+             <div class="divCell"> <%= line.ecriture_date %></div>
+             <div class="divCell"> <%= line.debit %></div>
+           </div> 
+         <% end %>
+      </div>
+
+      <div class="divTable">
+        <div class="divRow"> Top 5 - CashOut 👎 </div>
+          <div class="headRow">
+            <div  class="divCell"><strong class="highlight">Account number</strong></div>
+            <div  class="divCell"><strong class="highlight">Date</strong></div>
+            <div  class="divCell"><strong class="highlight">Amount</strong></div>
+          </div>
+        
+          <% @top5_credit.each do |line| %>
+          <div class="divRow">
+            <div class="divCell"><%= line.compte_num %></div>
+            <div class="divCell"><%= line.ecriture_date %></div>
+            <div class="divCell">- <%= line.credit %></div>
+          </div>
+        <% end %>
+      </div>
+
     </div>
-  </div>
-
+    
 </div>
-    <%= @lines.treasury_debit %>
 
 
-    <%= current_user.email %>
 
-    <p>Total Debit</p>
-    <%= @lines.treasury_debit.first(5) %>
 
-    <p>Total Credit</p>
-    <%= @lines.treasury_credit.sum %>
 
-<% @lines.treasury.max(5).each do |line| %>
-  <%= line.compte_num  %>
-<% end %>
+
+
 
 
 ## comme la search -> get avec un formulaire + des if -> formulaire se submit quand c'est ok
@@ -76,13 +101,14 @@
       <th scope="col">Top</th>
       <th scope="col">Account number</th>
       <th scope="col">Amount</th>
+      <th scope="col">Date</th>
     </tr>
   </thead>
   <tbody>
     <tr>
       <th scope="row">1</th>
-      <td> <%= @lines.treasury.max.compte_num  %> </td>
-      <td> <%= @lines.treasury_debit.max %> €</td>
+      <td> <%=  %> 512</td>
+      <td> <%=  %> €</td>
     </tr>
     <tr>
       <th scope="row">2</th>
@@ -90,6 +116,20 @@
     <tr>
     <tr>
       <th scope="row">3</th>
+      <td>Larry</td>
+      <td>the Bird</td>
+      <td>@twitter</td>
+    </tr>
+
+    <tr>
+      <th scope="row">4</th>
+      <td>Larry</td>
+      <td>the Bird</td>
+      <td>@twitter</td>
+    </tr>
+
+    <tr>
+      <th scope="row">5</th>
       <td>Larry</td>
       <td>the Bird</td>
       <td>@twitter</td>
