--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -387,17 +387,17 @@
 <div class="container">
   <div class="cards">  
     <div class="card">
-      <img src="images/apply.svg" alt="">
+      <img src="" alt="">
       <h4><strong class="highlight">1 - Get a Fec</strong></h4>
       <p>Download a FEC from your accounting software or ask your accountant ! </p>
     </div>  
     <div class="card">
-      <img src="images/learn.svg" alt="">
+      <img src="" alt="">
       <h4>2 - Upload it on DeciDesk</h4>
       <p>Upload the file on your DeciDesck account !</p>
     </div>  
     <div class="card">
-      <img src="images/product.svg" alt="">
+      <img src="" alt="">
       <h4>3 - Let us do the magic</h4>
       <p>Consult the results of the analysis on your dashboard !</p>
     </div>  
