--- a/app/views/sales/show.html.erb
+++ b/app/views/sales/show.html.erb
@@ -1,15 +1,28 @@
 <h1>Sales</h1>
 
-<!-- <div class="row">
-  <div class="col-6">
-    <div data-controller="charts" data-charts-numbers="<%= Line.annual_sales.map { |key, value| {x: key, y: value } }.to_json %>">
-      <canvas data-charts-target="container" width="400" height="400">
-      </canvas>
-    </div>
-  </div>
-</div> -->
-
 <div>
-  <%= column_chart Line.annual_sales, prefix: "€", thousands: ",", download: true, title: "Annual Sales" %>
+  <%= column_chart @annual_sales, prefix: "€", thousands: ",", download: true, title: "Monthly Sales" %>
 </div>
 
+<div>
+  <%= column_chart @sales_volume, download: true, title: "Monthly Sales Volume" %>
+</div>
+
+<div class="row d-flex justify-content-around">
+  <div class="divTable">
+    <div class="divRow"> Top 5 - Sales 💶</div>
+      <div class="headRow">
+        <div class="divCell"><strong class="highlight">Sales</strong></div>
+        <div class="divCell"><strong class="highlight">Date</strong></div>
+        <div class="divCell"><strong class="highlight">Amount</strong></div>
+      </div>
+
+      <% @top5sales_credit.each do |line| %>
+      <div class="divRow">
+        <div class="divCell"><%= line.ecriture_lib %></div>
+        <div class="divCell"><%= line.ecriture_date %></div>
+        <div class="divCell"><%= line.credit %></div>
+      </div>
+    <% end %>
+  </div>
+</div>
