chart and table

--- a/app/views/treasuries/show.html.erb
+++ b/app/views/treasuries/show.html.erb
@@ -6,41 +6,29 @@
     <p><%= link_to "Notes", "#" %></p>
   </div>
 
+  <div class="row">
+    <h4>Your cash is at <strong class="highlight"><%= @balance_last_day.to_i %> € </strong>on <%= @treasury_last_day.ecriture_date %> </h4>
+  </div>
+
   <div class="row d-flex justify-content-around">
-    <div class="col-lg-7 card-dash">Graph</div>
-    <div class="col-lg-4 card-dash">
-      <table class="table">
-        <p><strong>How's your cash ont the period ?</strong></p>
-         <thead>
-           <tr>
-            <th scope="col">Month</th>
-            <th scope="col">Balance</th>
-           </tr>
-         </thead>
-         <tbody>
-           <tr>
-             <th scope="row">1</th>
-             <td>Mark</td>
-           </tr>
-           <tr>
-             <th scope="row">2</th>
-             <td>Jacob</td>
-           </tr>
-           <tr>
-             <th scope="row">3</th>
-             <td>Larry</td>
-           </tr>
-           <tr>
-             <th scope="row">3</th>
-             <td>Larry</td>
-           </tr>
-           <tr>
-             <th scope="row">3</th>
-             <td>Larry</td>
-           </tr>
-           
-         </tbody>
-      </table>
+    <div class="col-lg-7 card-dash">
+       <%= column_chart Line.monthly_cash, prefix: "€", thousands: ",", download: true, title: "Monthly Cash" %>
+    </div>
+
+      <div class="divTable">
+         <div class="divRow"> How's your cash ont the period ? </div>
+         <div class="headRow">
+           <div  class="divCell"><strong class="highlight">Date</strong></div>
+           <div  class="divCell"><strong class="highlight">Amount</strong></div>
+         </div>
+
+         <% Line.monthly_cash.each do |key, value| %>
+           <div class="divRow">
+             <div class="divCell"> <%= key %></div>
+             <div class="divCell"> <%= value %> € </div>
+           </div> 
+         <% end %>
+      </div>
     </div>
   </div>
 
@@ -83,88 +71,3 @@
     </div>
     
 </div>
-
-
-
-
-
-
-
-
-
-## comme la search -> get avec un formulaire + des if -> formulaire se submit quand c'est ok
-
-<table class="table">
-  <h3>Top 5 - Cashin 👍 </h3>
-  <thead>
-    <tr>
-      <th scope="col">Top</th>
-      <th scope="col">Account number</th>
-      <th scope="col">Amount</th>
-      <th scope="col">Date</th>
-    </tr>
-  </thead>
-  <tbody>
-    <tr>
-      <th scope="row">1</th>
-      <td> <%=  %> 512</td>
-      <td> <%=  %> €</td>
-    </tr>
-    <tr>
-      <th scope="row">2</th>
-
-    <tr>
-    <tr>
-      <th scope="row">3</th>
-      <td>Larry</td>
-      <td>the Bird</td>
-      <td>@twitter</td>
-    </tr>
-
-    <tr>
-      <th scope="row">4</th>
-      <td>Larry</td>
-      <td>the Bird</td>
-      <td>@twitter</td>
-    </tr>
-
-    <tr>
-      <th scope="row">5</th>
-      <td>Larry</td>
-      <td>the Bird</td>
-      <td>@twitter</td>
-    </tr>
-  </tbody>
-</table>
-
-<table class="table">
- <p>Top 5 - Cashout 👎 </p>
-  <thead>
-    <tr>
-      <th scope="col">Item</th>
-      <th scope="col">First</th>
-      <th scope="col">Last</th>
-      <th scope="col">Handle</th>
-    </tr>
-  </thead>
-  <tbody>
-    <tr>
-      <th scope="row">1</th>
-      <td>Mark</td>
-      <td>Otto</td>
-      <td>@mdo</td>
-    </tr>
-    <tr>
-      <th scope="row">2</th>
-      <td>Jacob</td>
-      <td>Thornton</td>
-      <td>@fat</td>
-    </tr>
-    <tr>
-      <th scope="row">3</th>
-      <td>Larry</td>
-      <td>the Bird</td>
-      <td>@twitter</td>
-    </tr>
-  </tbody>
-</table>
