--- a/app/views/reports/_form.html.erb
+++ b/app/views/reports/_form.html.erb
@@ -1,5 +1,6 @@
  <div class="mt-5">
    <%= simple_form_for(@report) do |f| %>
+    <%= f.input :name, as: :string, hint: 'We suggest naming your report by time period', require: true %>
     <%= f.input :csv_file, as: :file, hint: 'Upload your FEC in csv format here', required: true %>
     <%= f.submit %>
   <% end %>
