--- a/app/views/treasuries/show.html.erb
+++ b/app/views/treasuries/show.html.erb
@@ -1,7 +1,7 @@
 <div class="container">
 
   <div class="dash-nav">
-    <p><%= link_to "Treasuy", "#" %></p>
+    <p><%= link_to "Treasury", "#" %></p>
     <p><%= link_to "Advise", "#" %></p>
     <p><%= link_to "Notes", "#" %></p>
   </div>
@@ -26,7 +26,7 @@
            <div class="divRow">
              <div class="divCell"> <%= key %></div>
              <div class="divCell"> <%= value %> € </div>
-           </div> 
+           </div>
          <% end %>
       </div>
     </div>
@@ -47,7 +47,7 @@
              <div class="divCell"><%= line.compte_num %></div>
              <div class="divCell"> <%= line.ecriture_date %></div>
              <div class="divCell"> <%= line.debit %></div>
-           </div> 
+           </div>
          <% end %>
       </div>
 
@@ -58,7 +58,7 @@
             <div  class="divCell"><strong class="highlight">Date</strong></div>
             <div  class="divCell"><strong class="highlight">Amount</strong></div>
           </div>
-        
+
           <% @top5_credit.each do |line| %>
           <div class="divRow">
             <div class="divCell"><%= line.compte_num %></div>
@@ -69,5 +69,5 @@
       </div>
 
     </div>
-    
+
 </div>
