all treasury transactions

--- a/app/assets/stylesheets/components/_dashboards.scss
+++ b/app/assets/stylesheets/components/_dashboards.scss
@@ -79,12 +79,34 @@
   border-radius: 5px;
 }
 
+.divTableAll
+{
+  display: table;
+  width: 100%;
+  justify-content: center;
+  align-items: center;
+  background-color:rgb(255, 255, 255);
+  border-spacing:1px;
+  margin-top: 20px;
+  margin-bottom: 20px;
+  margin-left: 10px;
+  padding: 10px;
+  text-shadow: 1px 1px 3px rgba(0,0,0,0.2);
+  box-shadow: 0 0 15px rgba(0,0,0,0.2);
+  border-radius: 5px;
+}
+
+
 
 .divRow
 {
-  display:table-row;
-  width:auto;
+  display: table-row;
+  display: felx;
+  justify-content: around;
+  width: 100%;
   text-align: center;
+  border-bottom: dashed 1px #1f008c;
+
 }
 
 .divCell {
@@ -93,8 +115,6 @@
   width:150px;
   background-color:rgb(255, 255, 255);
   text-align: center;
-  border-bottom: dashed 1px #1f008c;
   margin-top: 2px;
   margin-bottom: 2px;
 }
-
