--- a/app/views/expenditures/show.html.erb
+++ b/app/views/expenditures/show.html.erb
@@ -5,8 +5,14 @@
 
   <div class="dash-nav">
     <p><%= link_to "Expenditures", report_expenditures_path, class: "tab-underlined active" %></p>
-    <p><%= link_to "Advice", report_expenditures_path, class: "tab-underlined" %></p>
-    <p><%= link_to "Comments", report_expenditures_path, class: "tab-underlined" %></p>
+    <p><%= link_to "Advice", report_expenditures_advice_path, class: "tab-underlined" %></p>
+    <p><%= link_to "Comments", report_expenditures_comments_path, class: "tab-underlined" %></p>
+    <p><%= link_to "All Transactions", report_expenditures_transactions_path(@report) %></p>
+     <select class="form-select" aria-label="Default select example">
+      <option selected>Choose View</option>
+      <option value="1">Monthly</option>
+      <option value="2">Weeekly</option>
+    </select>
   </div>
 
   <div class="col-lg-12 card-dash row justify-content-center">
@@ -46,7 +52,7 @@
           <% end %>
          </tbody>
       </table>
-      <p class = "row justify-content-center"><%= link_to "Show more", report_expenditures_path, class: "tab-underlined" %></p>
+      <p class = "row justify-content-center"><%= link_to "Show more", report_expenditures_transactions_path(@report), class: "tab-underlined" %></p>
 
     </div>
     </div>
